--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-layout: index_layout
+layout: default
 title: Lonaparte CHENG
 ---
 
-<h3>My Article</h3>
+<h3>My Articles</h3>
 <ul>
 　　{% for post in site.posts %}
 　　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
